# wasm-app

./: Cargo.toml
src/: data.json  js_func.js  lib.rs  main.js  main.rs  structs.rs
