[package]
name = "simple-wasm"
version = "0.1.0"
authors = ["Vinicius Domingues <vinicius.ld@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = "0.2"
